# basics-of-programming

./: .gitignore
first_term/laba1/: task 1.cpp  task 2.cpp  task 3.cpp  task 5.cpp  task 8.cpp  task 9.cpp
first_term/laba2/: task_1.cpp  task_10.cpp  task_11.cpp  task_13.cpp  task_2.cpp  task_4.2.cpp  task_5.cpp  task_9.cpp
first_term/laba3/: task_2.cpp  task_4.1.cpp  task_8.cpp
first_term/laba4/: task1.cpp  task11.cpp  task13.cpp  task5.cpp  task6.cpp  task8.cpp  task9.cpp
first_term/laba5/: task8.cpp
first_term/laba6/: main.cpp
first_term/laba7/: task4.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
laba1/: task 4.cpp  task 6.cpp  task 7.cpp
laba2/: task_12.cpp  task_14.cpp  task_3.cpp  task_4.1.cpp  task_6.cpp  task_7.cpp  task_8.cpp
laba3/: task_1.cpp  task_3.cpp  task_4.2.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_9.cpp
laba4/: task10.cpp  task12.cpp  task2.cpp  task3.cpp  task4.cpp  task7.cpp
laba5/: task6.cpp  task7.cpp
laba5/UnitTests/: task5TEST.cpp
laba5/task1/: task1.cpp
laba5/task2/: task2.cpp
laba5/task4/: task4.cpp
laba6/: task5.cpp  task6.cpp  task7.cpp  task8.cpp
laba6/UnitTest/: unitTest6.cpp  (+1 more)
laba7/: task1.cpp  task2.cpp  task3.cpp  task5.cpp
second_term/LW4/LW4_T2/: CMakeLists.txt  Shared_ptr.h  func.txt  main.cpp
second_term/LW4/LW4_T2/C_functions/: c_functions.cpp  c_functions.h
second_term/LW4/LW4_T2/Headers/: String.h  Unique_ptr.h
second_term/LW4/LW4_T2/Iterators/: Reverse_iterator.h
second_term/LW4/LW4_T2/String/: String.cpp  String.h
second_term/LW4/LW4_T2/Unique_ptr/: Unique_ptr.cpp  Unique_ptr.h
(+261 files in other folders)
